--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#9baec8</color>
+    <color name="colorPrimaryDark">#282c37</color>
+    <color name="colorAccent">#2b90d9</color>
+    <color name="colorCards">#d9e1e8</color>
 
     <color name="startColor">#00d3d5</color>
     <color name="endColor">#88d269</color>
