--- a/app/src/main/res/layout/card_weather.xml
+++ b/app/src/main/res/layout/card_weather.xml
@@ -6,7 +6,7 @@
         <variable name="forecast" type="com.example.notweather.model.Forecast"/>
     </data>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginBottom="10dp"
@@ -15,7 +15,7 @@
         app:contentPadding="10dp"
         app:cardCornerRadius="4dp">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -81,6 +81,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 tools:text="Wed 09PM"/>
 
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
