Rename app to NotRain and create ReadMe

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <data>
         <import type="android.view.View"/>
-        <variable name="city" type="com.example.notweather.model.City"/>
+        <variable name="city" type="com.example.notrain.model.City"/>
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
